--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.16",
     "@vueuse/core": "^10.0.0",
+    "radix-vue": "^1.9.2",
     "vue": "^3.4.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@iconify-json/heroicons": "^1.1.10",
+    "@tailwindcss/forms": "^0.5.7",
     "@tsconfig/node20": "^20.0.0",
     "@types/node": "^20.0.0",
     "@vitejs/plugin-vue": "^5.0.0",
@@ -30,7 +31,6 @@
     "unplugin-icons": "^0.19.0",
     "unplugin-vue-components": "^0.27.0",
     "vite": "^5.0.0",
-    "vite-plugin-pages": "^0.32.0",
     "vue-tsc": "^2.0.29"
   }
 }
