--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build --force"
+    "type-check": "vue-tsc --build --force",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@vueuse/core": "^10.0.0",
@@ -21,7 +22,9 @@
     "@types/node": "^20.0.0",
     "@vitejs/plugin-vue": "^5.0.0",
     "@vue/tsconfig": "^0.5.1",
+    "@ycs77/eslint-config": "^2.3.0",
     "autoprefixer": "^10.4.16",
+    "eslint": "^9.0.0",
     "npm-run-all2": "^6.1.2",
     "postcss": "^8.4.0",
     "postcss-import": "^15.1.0",
