--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@vueuse/core": "^11.0.0",
+    "dayjs": "^1.11.13",
+    "phaser": "^3.80.1",
     "radix-vue": "^1.9.5",
     "vue": "^3.5.0",
     "vue-router": "^4.4.0"
