--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vueuse/core": "^11.0.0",
     "dayjs": "^1.11.13",
     "phaser": "^3.80.1",
+    "phaser3-rex-plugins": "^1.80.7",
     "radix-vue": "^1.9.5",
     "vue": "^3.5.0",
     "vue-router": "^4.4.0"
