--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@iconify-json/heroicons": "^1.1.10",
+    "@iconify-json/svg-spinners": "^1.2.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tsconfig/node20": "^20.0.0",
     "@types/node": "^20.0.0",
