--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build --force",
+    "type-check": "vue-tsc --build",
     "lint": "eslint ."
   },
   "dependencies": {
-    "@vueuse/core": "^11.1.0",
+    "@vueuse/core": "^11.3.0",
     "dayjs": "^1.11.13",
-    "phaser": "^3.85.2",
-    "phaser3-rex-plugins": "^1.80.7",
-    "radix-vue": "^1.9.6",
-    "vue": "^3.5.10",
-    "vue-router": "^4.4.5"
+    "phaser": "^3.87.0",
+    "phaser3-rex-plugins": "^1.80.12",
+    "radix-vue": "^1.9.10",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.0",
@@ -24,20 +24,21 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tsconfig/node20": "^20.0.0",
     "@types/node": "^20.0.0",
-    "@vitejs/plugin-vue": "^5.1.4",
+    "@vitejs/plugin-vue": "^5.2.0",
     "@vue/tsconfig": "^0.5.1",
     "@ycs77/eslint-config": "^3.1.1",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.15.0",
-    "npm-run-all2": "^6.2.3",
-    "postcss": "^8.4.47",
+    "eslint": "^9.16.0",
+    "npm-run-all2": "^6.2.6",
+    "postcss": "^8.4.49",
     "postcss-import": "^15.1.0",
-    "tailwindcss": "^3.4.13",
-    "typescript": "~5.4.5",
-    "unplugin-auto-import": "^0.18.3",
+    "tailwindcss": "^3.4.15",
+    "typescript": "~5.6.3",
+    "unplugin-auto-import": "^0.18.6",
     "unplugin-icons": "^0.19.3",
-    "unplugin-vue-components": "^0.27.4",
-    "vite": "^5.4.8",
-    "vue-tsc": "^2.1.6"
+    "unplugin-vue-components": "^0.27.5",
+    "vite": "^6.0.0",
+    "vite-plugin-vue-devtools": "^7.6.7",
+    "vue-tsc": "^2.1.10"
   }
 }
