--- a/package.json
+++ b/package.json
@@ -22,17 +22,15 @@
     "@iconify-json/heroicons": "^1.2.0",
     "@iconify-json/svg-spinners": "^1.2.0",
     "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/vite": "4.0.0-beta.4",
     "@tsconfig/node20": "^20.0.0",
     "@types/node": "^20.0.0",
     "@vitejs/plugin-vue": "^5.2.0",
     "@vue/tsconfig": "^0.5.1",
     "@ycs77/eslint-config": "^3.1.1",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9.16.0",
     "npm-run-all2": "^6.2.6",
-    "postcss": "^8.4.49",
-    "postcss-import": "^15.1.0",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "4.0.0-beta.4",
     "typescript": "~5.6.3",
     "unplugin-auto-import": "^0.18.6",
     "unplugin-icons": "^0.19.3",
